--- a/vue2.html
+++ b/vue2.html
@@ -8,7 +8,8 @@
   <title>square 2 </title>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.9/vue.js'
     integrity='sha512-o9SZrtqlGkpa7EF+dDrNjEdRFFYhymlrBzDKpolHNolxsyx0IcXAbEm9i1e8QpoiMgEdKZVtY8XiK1t8i6jVDA=='
-    crossorigin='anonymous'></script>
+    crossorigin='anonymous'>
+  </script>
   <style>
     html {
       height: 100vh;
